environments/prod/deployments/echo-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-app
  labels:
    name: echo-app
    environment: prod
